# tweakcc-fixed

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LINUX-TESTING.md  README.md  TODO-FOR-LATER.md  eslint.config.js  fff_implementation_plan.md  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.husky/: pre-commit
data/: prompt-classification.json
scripts/: bootstrap-vps.sh  sync-skrabe.sh
src/: App.tsx  commands.ts  communityThemes.ts  config.ts  defaultSettings.ts  formatAndDiff.test.ts  generateMarkdownHtmlCommentBody.test.ts  index.tsx  installationBackup.ts  installationDetection.ts  installationPaths.ts  migration.ts  mutableText.test.ts  mutableText.ts  nativeInstallation.ts  nativeInstallationLoader.ts  patchFilter.test.ts  patchFilter.ts  ripgrepFff.ts  startup.ts  systemPromptCustomization.test.ts  systemPromptDownload.ts  systemPromptHashIndex.test.ts  systemPromptHashIndex.ts  systemPromptPieceMatcher.test.ts  systemPromptPieceMatcher.ts  systemPromptPieceMatcherCorpus.test.ts  systemPromptPreflight.test.ts  systemPromptPreflight.ts  systemPromptPristine.ts  systemPromptSites.test.ts  systemPromptSites.ts  systemPromptSync.test.ts  systemPromptSync.ts  systemReminderSync.ts  types.ts  utils.test.ts  utils.ts  versionBumpReport.test.ts
tools/: applySafetyHarness.mjs  applySafetyHarness.test.mjs  auditMisbinds.mjs  generateIdentifierUnion.mjs  normalizeIdGroups.d.ts  normalizeIdGroups.js  (+7 more)
tools/rg-fff/: Cargo.toml  equivalence-test.mjs
tools/rg-fff/src/: daemon.rs  main.rs
(+338 files in other folders)
